Implementado a estrutura HTML da página home

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h2>Página Inicial do site</h2>
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Celke - Página inicial</title>
+</head>
+
+<body>
+
+    <h2>Página Inicial do site</h2>
+
+</body>
+
+</html>
