Acrescentado o título na página contato

--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,10 @@
 
 <body>
 
+    <h2>Página contato do site</h2>
+
+    <p>Conteúdo do primeiro paragrafo da página contato.</p>
+
 </body>
 
 </html>
