Acrescentado o paragrafo na página home

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <p>Conteúdo do primeiro paragrafo da página home.</p>
 
+    <p>Conteúdo do segundo paragrafo da página home.</p>
+
 </body>
 
 </html>
