Inserido o segundo paragrafo na página sobre

--- a/sobre.html
+++ b/sobre.html
@@ -12,6 +12,7 @@
     <h2>Página sobre do site</h2>
 
     <p>Conteúdo do primeiro paragrafo da página sobre.</p>
+    <p>Conteúdo do segundo paragrafo da página sobre.</p>
 
 </body>
 
